# Ynk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STRUCTURE.md  TODO.md  build.ninja
Art/: Art.cc  Art.hh  Color.hh  GLOutput.cc  Model.h  Model.hh  Notes.cc  PushRelabel.cc  PushRelabel.h  PushRelabel.hh  README.md  art.cc  linmath.h
Art/GL/: Errors.cc  Hooks.cc  Main.cc  Setup.cc
Art/GLArtApp/: GLArtApp.cc
Art/GLSimulationApp/: GLSimulationApp.cc
Art/Model/: Brush.cc  Model.cc  Model.hh  PaperLayer.cc  TintLayer.cc  WaterLayer.cc
Art/PushRelabel/: PushRelabel.cc  PushRelabel.hh
Art/TUIApp/: TUIApp.cc
Art/shaders/: core-fragment-shader.glsl  core-vertex-shader.glsl
Artisan/macos/: Ikonik.icns  Info.tpl.plist  libglfw.3.3.dylib  osx_export.sh
Ynk/: App.cc  App.h  App.hh  Bootstrap.c  Bootstrap.cc  Bootstrap.h  Bootstrap.hh  Bootstrap.md  Compiler.h  Compiler.hh  Config.h  Config.hh  Features.h  Features.hh  Platform.h  Platform.hh  Utility.h  Utility.hh
Ynk/Atomic/: Atomic.hh  Ordering.hh
Ynk/Backtrace/: Backtrace.cc  Backtrace.hh
Ynk/Box/: Box.h  Box.hh
Ynk/Container/: RBTree.h  RBTree.hh  Set.h  Set.hh
Ynk/Fmt/: DefaultFormatters.h  DefaultFormatters.hh  Fmt.cc  Fmt.h  Fmt.hh
Ynk/GL/: Program.cc  Program.hh  Shader.cc  Shader.hh
Ynk/Geometry/: Space.h  Space.hh
Ynk/Iterator/: Iterator.h  Iterator.hh
Ynk/Lang/: Conditional.h  Conditional.hh  Dequalify.hh  Forward.hh  Move.hh  NonCopyable.hh  NonMoveable.h  NonMoveable.hh  RemoveIntegerUnsignedness.h  RemoveIntegerUnsignedness.hh  ScopedLambda.h  ScopedLambda.hh  Traits.hh
Ynk/Math/: Math.hh
Ynk/Num/: Integers.cc  Integers.hh  NativeFloats.h  NativeFloats.hh  NativeIntegers.h  NativeIntegers.hh
Ynk/Option/: Option.hh
Ynk/Panic/: DefaultPanicHook.cc  Panic.cc  Panic.h  Panic.hh  Panicking.h  Panicking.hh
Ynk/Rc/: Rc.hh
Ynk/Result/: Result.h  Result.hh
Ynk/String/: String.cc  String.h  String.hh  utf8_strlen.cc  utf8_strlen.x86_64-svr4.s
Ynk/UX/: Color.cc  Color.hh  ColorAdapters.cc  ColorAdapters.hh
Ynk/atomic/: Atomic.h  Ordering.h
Ynk/backtrace/: Backtrace.cc  Backtrace.h
Ynk/box/: Box.h
Ynk/fmt/: Dispatcher.h  Fmt.h
Ynk/lang/: Dequalify.h  Forward.h  Move.h  NonCopyable.h  ScopedLambda.h  Traits.h
Ynk/num/: Integers.h  NativeIntegers.h
Ynk/option/: Option.h
Ynk/rc/: Rc.h
Ynk/result/: Result.h
Ynk/string/: String.h  utf8_strlen.cc
Ynk/sys/any-posix/Sync/: Condvar.cc  Condvar.h  Condvar.hh  Mutex.cc  Mutex.h  Mutex.hh  RwLock.cc  RwLock.hh
Ynk/sys/any-posix/sync/: Condvar.cc  Condvar.h  Mutex.cc  Mutex.h  RwLock.cc  RwLock.h
Ynk/sys/common/Sync/: Condvar.h  Condvar.hh  Mutex.hh  RwLock.h  RwLock.hh  ThreadId.h  ThreadId.hh
Ynk/sys/common/sync/: Condvar.h  Mutex.h  RwLock.h
Ynk/sys/macos/Sync/: ThreadId.cc
art/: art.cc
clang/: dev-asflags.txt  dev-cflags.txt  dev-cxxflags.txt
clang/x86_64-apple-darwin/: dev-asflags.txt  dev-cflags.txt  dev-cxxflags.txt  dev-ldflags.txt  dev-macros.txt
frost/: files.x86_64-apple-darwin.dev.frost  frost-meta.x86_64-apple-darwin.dev.php
frost/base/: file-extensions.frost
